objects/Wiring_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerState__c</fullName>
        <label>Customer State</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company__c</fullName>
        <label>Title Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_City__c</fullName>
        <label>Wire City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Credit_To__c</fullName>
        <label>Wire Credit To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_State__c</fullName>
        <label>Wire State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Zipcode__c</fullName>
        <label>Wire Zipcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Wiring Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Routing_Number__c</columns>
        <columns>Title_Company__c</columns>
        <columns>Wire_City__c</columns>
        <columns>Wire_Credit_To__c</columns>
        <columns>Wire_State__c</columns>
        <columns>Wire_Zipcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Wiring Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiring Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>